Correção dos produtos 2.0 + mudanças no payload de produtos (pode mudar)
