# src/backend/models/Produto.js
@@ -13,6 +13,7 @@ const Produto = sequelize.define(
     titulo: {
       type: DataTypes.STRING(120),
       allowNull: false,
+      field: "nome",
     },
 
     descricao: {
@@ -22,34 +23,45 @@ const Produto = sequelize.define(
 
     codigoSku: {
       type: DataTypes.STRING(50),
-      allowNull: false,
+      allowNull: true,
+      unique: true,
       field: "codigo_sku",
     },
 
     idMarca: {
       type: DataTypes.INTEGER,
-      allowNull: false,
+      allowNull: true,
       field: "id_marca",
       references: {
-        model: "marca",
+        model: "marcas",
         key: "id",
       },
+      onUpdate: "CASCADE",
+      onDelete: "RESTRICT",
     },
 
     idCategoria: {
       type: DataTypes.INTEGER,
-      allowNull: false,
+      allowNull: true,
       field: "id_categoria",
       references: {
-        model: "categoria",
+        model: "categorias",
         key: "id",
       },
+      onUpdate: "CASCADE",
+      onDelete: "RESTRICT",
     },
 
     idFornecedor: {
       type: DataTypes.INTEGER,
-      allowNull: false,
+      allowNull: true,
       field: "id_fornecedor",
+      references: {
+        model: "clientes",
+        key: "id",
+      },
+      onUpdate: "CASCADE",
+      onDelete: "RESTRICT",
     },
 
     tipoItem: {
@@ -63,13 +75,14 @@ const Produto = sequelize.define(
       type: DataTypes.DECIMAL(10, 2),
       allowNull: false,
       defaultValue: 0,
+      field: "preco_unitario",
     },
 
     estoqueAtual: {
-      type: DataTypes.INTEGER,
+      type: DataTypes.DECIMAL(10, 2),
       allowNull: false,
       defaultValue: 0,
-      field: "estoque_atual",
+      field: "quantidade",
     },
   },
   {
